Write analog output section

--- a/04/resume04.tex
+++ b/04/resume04.tex
@@ -70,9 +70,39 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Analog Output}
+前回までは、Digital Input と Digital Output を用いて、
+スイッチの ON/OFF を取得したり、 LED を点滅させたりしました。
+しかし、単に ON/OFF を取得するのではなくもう少し緩やかな変化を取得したい場合や、
+LED をじわじわと光らせたい場合などがあると思います。
+そのような場合には Digital Input/Output ではなく Analog Input/Output を使います。
+
+今回は Analog Output を用いて、LED を任意の明るさで光らせる、ということをやってみましょう。
+
+\subsection*{PWM (Pulse Width Modulation)}
+実は、Arduino においての Analog Output は実際に電圧が変化するのではなく、
+PWM (Pulse Width Modulation) と呼ばれる方式で擬似的に実現しています。
+
+Processing から Arduino の Analog Output を用いるためには準備として、
+\begin{lstlisting}
+ // pinNum は回路に合わせて変える 
+ arduino.pinMode(pinNum, Arduino.OUTPUT);
+\end{lstlisting}
+が必要となります。
+これは Digital Output のときと同様です。
+
+Digital Output のときは arduino.digitalWrite() を用いましたが、
+Analog Output の場合は
+\begin{lstlisting}
+ // value は 0〜255 で設定
+ arduino.analogWrite(pinNum, value);
+\end{lstlisting}
+を用います。
+Digital Output のときは、Arduino.HIGH (5V) か Arduino.LOW (0V) のどちらかにしましたが、
+Analog Output の場合は 0〜255 の値で自由に設定できます。
+これにより、緩やかに LED の明るさを変化させるといったことが可能になります。
 
 \section{LED を徐々に光らせる}
-Analog Output を用いる LED を細かく制御することができます。
+では、実際に LED の光り方を細かく制御してみましょう。
 
 \subsection*{プログラム}
 \begin{lstlisting}
@@ -89,7 +119,8 @@ void setup() {
 }
 
 void draw() {
-  arduino.analogWrite(ledPin, mouseX);   // マウスのx座標をLEDの明るさにする
+  // マウスのx座標をLEDの明るさにする 
+  arduino.analogWrite(ledPin, mouseX);
 }
 \end{lstlisting}
 
