--- a/05/resume05.tex
+++ b/05/resume05.tex
@@ -66,15 +66,50 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 % title
-\section*{\LARGE{第5講 明るさをはかる}}
-Arduino の Analog Input を用いて光センサの値を取得する。
+\section*{\LARGE{第5講 様々なセンサを用いる}}
+Arduino の Analog Input を用いて光センサや圧力センサ、曲げセンサの値を取得してみよう。
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{光センサ}
-CdSセル: CdS(硫酸カドミウム)を主成分とする電子部品。
-表面に当たる光の量に従って抵抗値が変化する。
-周りが暗いと抵抗値が大きく、明るいと抵抗値が小さくなる。
+\section{Processingの画面に文字を表示する}
+Processing では、矩形や円のような図形だけではなく、文字を描くこともできます。
+文字を表示するには text() を用います。
+また、 PFont と textfont() を用いることによってフォントの種類や大きさを変更することができます。
+
+Tools → Create Font の説明を！
+分かり難いので図を入れる！
+
+\begin{lstlisting}
+ PFont font;
+
+ void setup() {
+   size(400, 300);
+ 
+   font = createFont("font_name", 32); // フォントの準備
+ }
+
+ void draw() {
+   background(255);
+
+   fill(0);
+   textFont(font, 24);
+   text("Interactive Art", 50, 100);
+ }
+\end{lstlisting}
+
+
+\section{Analog Input}
+Analog Input の説明をほげほげ
+
+Processing から Digital Input を使う場合はは arduino.digitalRead(pinNum); を使いましたが、
+Analog Input を使うの場合は代わりに arduino.analogRead(pinNum); を使います。
+
+
+\section{光センサを使う}
+光センサとは、表面に当たる光の量に従って抵抗値が変化する電子部品です。
+周りが暗いと抵抗値が大きく、明るいと抵抗値が小さくなります。
+
+実習で使う光センサは CdSセル: CdS(硫酸カドミウム)を主成分とするものです。
 
 \begin{itemize}
  \item \textbf{利点}
@@ -86,141 +121,57 @@ CdSセル: CdS(硫酸カドミウム)を主成分とする電子部品。
  \item \textbf{欠点}
        \begin{itemize}
 	\item 反応速度がやや遅め
-	\item カドミウム = 有害物質
+	\item カドミウム = 有害物質 (ゼッタイに食うな！)
        \end{itemize}
 \end{itemize}
 
+% 光センサの写真でも入れる
+
+\subsection*{センサの抵抗値を測ってみよう}
+テスターを使ってほげほげ
+
 \subsection*{光センサの値を取得する}
 光センサの値を取得するためには、Analog Input を用います。
-Analog Input を用いる場合は A0 〜 A5 ピンを用います。接続するピンに注意してください。
+Analog Input を使う場合は A0 〜 A5 ピンを用いなければなりません。接続するピンに注意してください。
 
-\subsubsection*{回路を組む}
+\subsubsection*{回路}
 峻よろしく
 
-\subsubsection*{プログラムを書く}
-Processing から Digital Input を使う場合はは arduino.digitalRead(pinNum); を使いましたが、
-Analog Input を使うの場合は代わりに arduino.analogRead(pinNum); を使います。
-\begin{lstlisting}
-import processing.serial.*;
-import cc.arduino.*;
- 
-Arduino arduino;
-int opticalSensorPin = 3; // 光センサを A3 番ピンに接続した場合
- 
-void setup() {
-  arduino = new Arduino(this, Arduino.list()[0], 57600);
-  arduino.pinMode(opticalSensorPin, Arduino.INPUT); // ピンモードを INPUT に
-}
-
-void draw() {
-  int sensorValue = arduino.analogRead(opticalSensorPin); // Analog Input
-  println(sensorValue);
-}
-\end{lstlisting}
-
-
-\section{Processingの画面に文字を表示する}
-先ほどはコンソール(Processing IDE の下の黒いところ)にセンサから取得した値を表示しましたが、次は Processing の画面に表示してみましょう。
-
-\subsubsection*{Processing で画面に文字を表示する}
-Processing で文字を表示するためには text() を用います。
-\begin{lstlisting}
- void setup() {
-   size(400, 300);
- }
-
- void draw() {
-   // x = 50, y = 100 のところから "Interactive Art" の文字列を描く
-   text("Interactive Art", 50, 100);
- }
-\end{lstlisting}
-
-また、 PFont を用いることによってフォントの種類を変更することができます。
-
-Tools → Create Font の説明を！
-分かり難いので図を入れる！
-
-
-\begin{lstlisting}
- PFont font;
-
- void setup() {
-   size(400, 300);
- 
-   font = createFont("font_name", 32); // フォントの用意
-   textFont(font, 24);
- }
-
- void draw() {
-   text("Interactive Art", 50, 100);
- }
-\end{lstlisting}
-
-これらを利用して光センサから取得した値を画面に表示してみましょう。
-
-\begin{lstlisting}
-// Arduino版に書き換える
-import processing.gainer.*;
-Gainer myGainer;
-PFont myFont;
-void setup(){
-	
-size(???, ???);
-	
-colorMode(RGB, ???);
-	
-myGainer = new Gainer(this);
-	
-myFont = ??? (“Arial”, 24);
-	
-textFont(myFont);
-	
-textAlign( ??? );
-	
-myGainer.
-???
-;
-}
-void draw(){
-	
-background(?);
-	
-fill(???);
-	
-text(“value = ”+ myGainer.analogInput[0], ???, ???);
-}
-\end{lstlisting}
-
-
+\subsubsection*{プログラム}
 \begin{lstlisting}
  import processing.serial.*;
  import cc.arduino.*;
-
+ 
  Arduino arduino;
- int sensorPin = 6;
- Font font;
+ int sensorPin = 3; // 光センサを A3 番ピンに接続した場合
  
  void setup() {
-   size(400, 300);
-
    arduino = new Arduino(this, Arduino.list()[0], 57600);
-   arduino.pinMode(sensorPin, Arduino.INPUT);
-
-   font = createFont("hogehoge_font", 24);
+   arduino.pinMode(sensorPin, Arduino.INPUT); // ピンモードを INPUT に
  }
 
  void draw() {
-   int sensorValue = arduino.analogRead(sensorPin);
-
+   int sensorValue = arduino.analogRead(sensorPin); // Analog Input
    background(255);
- 
-   textFont(font);
-   textAlign(CENTER);
-   fill(0);
-   text("sensorValue = " + sensorValue, 100, 100);
- }
 
+   fill(0);
+   textFont(font, 24);
+   text("sensor value: " + sensorValue, 50, 100);
+}
 \end{lstlisting}
+
+
+\section{圧力センサを使う}
+圧力センサとは、ほげほげ。
+
+\section{曲げセンサを使う}
+曲げセンサとは、ほげほげ。
+
+前で見せますが高いのでおまえらにはやらねー。
+
+説明だけ
+
+
 \end{document}
 
  
