--- a/06/resume06.tex
+++ b/06/resume06.tex
@@ -67,128 +67,117 @@
 \begin{document}
 
 % title
-\section*{\LARGE{第6講 物体とセンサとの距離をはかる}}
+\section*{\LARGE{第6講 応用編: 赤外線センサとモータを連携させる}}
 赤外線センサを用いて、センサと物体との距離を測定する。
+
+モータの回転速度を制御する。
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{赤外線センサとはtest}
-Arduino で、物体との距離を非接触で測定するには「超音波方式」と「赤外線方式」がある。
-赤外線センサは、(その名の通り)赤外線を使うことで距離を測定する。
-赤外線センサは、物体から人体まで幅広いものの距離を検出することができる。
-今回利用する赤外線センサは、大体 10cm 〜 80cm までの距離を測定することができる。
-赤外線センサは、外光による影響を受けやすいため、使用する環境によっては注意する必要がある。
-赤外線センサよりも、もう少し長い距離を測定したい場合は、超音波センサを使うと良い。
+\section{赤外線センサを用いて距離を測る}
+物体との距離を非接触で測定するための方式には「超音波方式」と「赤外線方式」があります。
+赤外線センサは、(その名の通り)赤外線を用いて距離を測定しています。
+超音波センサは、物体から人体まで幅広いものの距離を検出することができる。
 
-\begin{itembox}{注意!}
- 赤外線センサは、とてもデリケートで配線の向きを間違えただけでも破損してしまう。
- PC に接続する前に配線が正しいかどうか、もう一度確認すること。
+今回利用する赤外線センサは、大体 10cm 〜 80cm までの距離を測定することができます。
+赤外線センサは、外光による影響を受けやすいため、使用する環境によっては注意する必要があります。
+赤外線センサよりも、もう少し長い距離を測定したい場合は、超音波センサを使うと良いでしょう。
+
+\begin{itembox}[l]{注意!}
+ 赤外線センサは、とてもデリケートで配線の向きを間違えただけでも破損してしまいます。
+ PC に接続する前に配線が正しいかどうか、もう一度確認すること！
 \end{itembox}
 
-\section{回路を組み立てる}
+\subsection*{回路}
+% \begin{figure}[h!]
+%  \centering
+%  \includegraphics[width=\columnwidth]{img/ir_sensor.eps}
+%  \caption{赤外線センサを用いた回路図}
+% \end{figure}
 
-回路図
 
-\subsection*{TRY1}
-回路図を参考に、Arduino と赤外線センサを接続する。必ず、Arduino は PC から取り外した状態で配線すること。
-
-\subsection*{TRY2}
-Processing の println 文を使って、赤外線センサが取得できる数値の範囲を確認する。
-わからなければ、前回・前々回のプログラムコードを参考にすること。
-
-[ Point ]
- 赤外線センサと物体の距離が変わると、数値がどのように変化するかに着目する。得られた数
-値を <TRY2> で使うので、メモしておくと良いでしょう。
-
-\subsection*{TRY3}
-前回の実習で参考にあげた map 関数を利用して、電子ものさしを作る。
-\begin{enumerate}
- \item テキストで、距離を表示する
- \item 長さをバー状に表示してみる
-\end{enumerate}
-
-[ Hint 1 ]
- センサの値と、実際の距離の計測値をマッピングする必要がある。
-(a < bとして、)
-!
-map(gainer.analogInput[0],
-<< aの時のセンサ値 >>, << bの時のセンサ値 >>, << aの実測値 >>,<< bの実測値 >>);
-[ Hint 2 ]
-
+\subsection*{プログラム}
 \begin{lstlisting}
- import processing.gainer.*;
- Gainer gainer;
  void setup() {
-   size(400, 150);
-   colorMode(RGB, 256);
-   gainer = new Gainer(this);
-   gainer.beginAnalogInput();
+
  }
- 
+
  void draw() {
-   //Gainer miniの ain0 値をprintln文で表示
-   println(gainer.analogInput[0]);
-   //背景色の指定
-   background(0);
-   //センサで取得した値を実際の距離にマッピングする
-   float value = map(gainer.analogInput[0], 180, 10, 5, 90);
-   stroke(255);
-   strokeWeight(20);
-   line(0, height/2, 4*value, height/2);
-}
+
+ }
 \end{lstlisting}
 
 
-Processingで座標系を変換する
-translate(x, y);
-!
-原点(デフォルトでは 0, 0)の位置をx, yに移動する。
-rotate(<<ラジアン角>>);
-!
-原点を中心に<<ラジアン角>>分、回転させる。
-radians(int degree);
-!
-degree(度) を ラジアン角に変換する。!
-scale(<<倍率>>);
-!
-座標を<<倍率>>に拡大(縮小)する。
-pushMatrix();
-!
-現在の座標系を保存する。
-popMatrix();
-!
-保存しておいた座標系を読み出す。
+\section{電子ものさしを作る}
+距離センサと後述する map 関数を組み合わせると、電子ものさしを作ることができます。
 
-\subsection*{TRY4}
-translateとrotateを使って、Processingで幾何学的な模様を書いてみる。
+\subsection*{準備}
+距離センサの値を取得して、数値がどのように変化するのか観察してみましょう。
+また、センサの値が実際の距離とどのように対応付いているのをメモしておいてください。
 
-[ Hint ]
+
+\subsection*{map関数}
+Processing には map 関数という機能が用意されています。
+% 説明入れて
+map 関数は非常に便利なので覚えておくとよいでしょう。
+% これわかる？
 \begin{lstlisting}
- int i = 0;
- 
- void setup() {
-   size(400, 400);
-   colorMode(HSB, 256);
-   background(0);
-   rectMode(CENTER);
-   frameRate(30);
- }
- 
- void draw() {
-   int angle = 12;
-   float x = 0.5;
-
-   translate(width/2, height/2);
-   fill(i*0.5, 256, 256);
-
-   pushMatrix();
-   rotate(radians(i*angle));
-   translate(i*x, 0);
-   rect(0, 0, 10, 10);
-   popMatrix();
-
-   i++;
-} 
+ float y = map(x, xMin, xMax, yMin, yMax);
 \end{lstlisting}
+
+\subsection*{プログラム}
+\begin{lstlisting}
+
+\end{lstlisting}
+
+回路はそのままで OK です。
+
+
+\section{モータを回転速度を制御する}
+モータを制御する回路にはいくつか種類がありますが、今回は配線が簡単な電界効果トランジスタ (FET: Field effect transistor) を使用した回路を用います。
+モータを回転させるには、比較的大きな電流が必要なため、Arduino の出力だけでは、モータを回転させ続けるパワーが足りません。
+そのため、外部電源からモータに電力を供給し、Arduino や Processing で制御するために必要となるのが FTE である。
+FET を用いることで、モータに流す電流を制御し、モータの回転数を変化させることができます (電流が多く流れると早く回る)。
+
+
+今回はいつもよりも多くの電子部品を使います。
+それぞれ各自、以下の部品が手元にあるか、確認してください。
+\begin{itemize}
+ \item モーター(RE-140RA) 1個
+ \item FET (2SK2232) 1個
+ \item 赤外線距離センサ 1個
+ \item 抵抗器(10kΩ) 1個
+ \item 単4型乾電池 2個
+ \item 電池ケース 1個
+ \item ダイオード 1個
+\end{itemize}
+% 一つ一つ画像を入れたほうが良さそう
+
+\subsection*{回路}
+% \begin{figure}[h!]
+%  \centering
+%  \includegraphics[width=\columnwidth]{img/motor_control.eps}
+%  \caption{モータ制御のための回路図}
+% \end{figure}
+
+\subsection*{プログラム}
+\begin{lstlisting}
+ 
+\end{lstlisting}
+
+\section{赤外線センサからの入力に基づいてモータを制御する}
+
+\subsection*{回路}
+% \begin{figure}[h!]
+%  \centering
+%  \includegraphics[width=\columnwidth]{img/motor_control.eps}
+%  \caption{モータ制御のための回路図}
+% \end{figure}
+
+\subsection*{プログラム}
+\begin{lstlisting}
+ 
+\end{lstlisting}
+
 
 \end{document}
