Change figure file name

--- a/06/resume06.tex
+++ b/06/resume06.tex
@@ -96,14 +96,14 @@
 \begin{figure}[h!]
  \begin{minipage}{0.5\columnwidth}
   \centering
-  \includegraphics[height=100mm]{img/Sekigai.eps}
+  \includegraphics[height=100mm]{img/ir_sensor.eps}
   \begin{center}
    \textbf{赤外線センサ}
   \end{center}
  \end{minipage}
  \begin{minipage}{0.5\columnwidth}
   \centering
-  \includegraphics[height=100mm]{img/Sekigai.eps}
+  \includegraphics[height=100mm]{img/ir_sensor.eps}
   \begin{center}
    \textbf{赤外線センサを用いた回路図}
   \end{center}
