Fix argument name of  map function

--- a/06/resume06.tex
+++ b/06/resume06.tex
@@ -150,7 +150,7 @@
 \subsection*{map関数}
 Processing には map 関数という機能が用意されています。
 \begin{lstlisting}
- float y = map(x, xMin, xMax, yMin, yMax);
+ float y = map(x, xBegin, xEnd, yBegin, yEnd);
 \end{lstlisting}
 map 関数は非常に便利なので覚えておくとよいでしょう。
 
